# multi-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pipeline-config.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: diagrams.md  observability.md  vertical-validation-findings-2026-04-13.md  vertical-validation-runbook.md
fixtures/validation/: research_topics.txt  sample_module.py
scripts/: phoenix_trace.py  run_phoenix.py  validate_vertical.py
specs/: choreography-research-llm-surface-spec.md  choreography-research-spec.md  core-infrastructure-spec.md  hybrid-analysis-spec.md  hybrid-foundation-orchestrator-spec.md  hybrid-foundation-phase-validator-spec.md  hybrid-foundation-pipeline-spec.md  hybrid-foundation-resilience-spec.md  hybrid-foundation-spec.md  hybrid-foundation-team-spec.md  milestone-1-wrap-up-spec.md  multi-agent-distributed-system.md  observability-phase1-spec.md  orchestration-code-analysis-llm-spec.md  orchestration-code-analysis-spec.md  vertical-validation-spec.md
src/choreography/: __init__.py
src/choreography/research/: __init__.py  (+4 more)
src/core/: __init__.py  observability.py
src/hybrid/: __init__.py
src/opentelemetry/: __init__.py
src/orchestration/: __init__.py
tests/: conftest.py  future_test_hybrid_foundation.draft  test_choreography_research.py  test_choreography_research_llm_surface.py  test_core_infrastructure.py  test_hybrid_phase_validator.py  test_hybrid_pipeline.py  test_hybrid_team.py  test_observability.py  test_orchestration_code_analysis.py  test_orchestration_code_analysis_llm.py  test_vertical_validation.py
(+18 files in other folders)
